# PlannerPulse

./: .env.example  .gitignore  .replit  FIXES_APPLIED.md  LICENSE  PlannerPulse_Code_Review_Report.md  README.md  app.py  bug_analysis_and_fixes.md  bug_fixes_report.md  builder.py  database.py  deduplicator.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  scraper.py  sponsor_manager.py  summarizer.py  test_app.py
PlannerPulse/: config.json  models.py  replit.md  scraper.py
PlannerPulse/data/: article_history_backup.json
PlannerPulse/output/: newsletter.md
PlannerPulse/templates/: base_template.html  preview.html
attached_assets/: Pasted--Planner-Pulse-Replit-Improvement-Request-UI-Content-Refinement-Project-Name--1752740766302_1752740766302.txt  Pasted--Project-Title-Planner-Pulse-AI-Powered-Newsletter-for-Meeting-Planners-O-1752738368690_1752738368692.txt
data/: sponsor_state.json
output/: .gitkeep  newsletter.html  newsletter.md  newsletter.txt
static/: style.css
templates/: preview.html
